--- a/assests/style.css
+++ b/assests/style.css
@@ -1,9 +1,34 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 h1{
     text-align: center;
     margin: 50px;
 }
+
+/* Score Section */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    height: 300px;
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 25%;
+    text-align: center;
+  }
+  
+.row{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+  /* Clear floats after the columns */
+  .row:after {
+    display: table;
+    clear: both;
+  }
