button animation done

--- a/assests/style.css
+++ b/assests/style.css
@@ -90,4 +90,13 @@ h1{
     height:150px;
     border: 2px dashed rgb(103, 180, 103);
     padding: 10px;
+    background-color: rgb(79, 138, 79);
+    transition: transform 0.3s, background-color 0.3s;
+  }
+
+  img:hover{
+    border: 2px solid rgb(103, 180, 103);
+    background-color:  rgb(103, 180, 103);
+    transform: scale(1.05);
+    cursor: pointer;
   }
