--- a/assests/style.css
+++ b/assests/style.css
@@ -14,6 +14,24 @@ h1 {
   color:  rgb(191, 209, 87);
 }
 
+h2{
+    font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+  font-size: 2em;
+  color:  rgb(13, 82, 17);
+}
+
+p{
+    font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: medium;
+  font-size: 2.5em;
+  color:  rgb(112, 35, 11);
+}
+
 body{
     background-color: rgb(79, 138, 79);
 }
@@ -67,10 +85,21 @@ h1{
     width: 77%;
     margin: auto;
     border-radius: 20px;
+    align-items: center;
   }
 
   #resultsSection{
     margin-bottom: 35px;
+  }
+
+  .results-column{
+    font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: medium;
+  font-size: 2.5em;
+  color:  rgb(112, 35, 11);
+  
   }
 
   /*button section*/
