--- a/assests/style.css
+++ b/assests/style.css
@@ -140,3 +140,27 @@ h1{
     cursor: pointer;
   }
 
+  /*Reset Button*/
+button{
+  background-color: rgb(79, 138, 79);
+  padding: 15px 35px;
+  border: none;
+  border: 5px dashed coral;
+  border-radius: 10px;
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+  font-size: 2em;
+  color: coral;
+  transition: transform 0.3s, background-color 0.3s, color 0.3s;
+  display: block;
+  margin: 0 auto;
+}
+
+button:hover{
+  border: 5px solid coral;
+  background-color: coral;
+  color: beige;
+  cursor: pointer;
+}
