--- a/assests/style.css
+++ b/assests/style.css
@@ -39,6 +39,7 @@ body{
 h1{
     text-align: center;
     margin: 50px;
+    margin-bottom: 20px;
 }
 
 /* Score Section */
@@ -163,4 +164,9 @@ button:hover{
   background-color: coral;
   color: beige;
   cursor: pointer;
+}
+
+#rules{
+  text-align: center;
+  margin-bottom: 25px;
 }
